# brosur-sistemi

./: README.md
market-brosur-sistemi/: .gitignore  .replit  PROJE_DURUMU_RAPORU.md  README.md  SISTEM_ANAYASASI.md  ai_service.py  app.py  cleanup_wizard.py  create_preview_images.py  database.py  get_ai_ideas.py  gunicorn_config.py  image_processor.py  pyproject.toml  render.yaml  requirements.txt
market-brosur-sistemi/attached_assets/: README.md  urun_sablonu.csv
market-brosur-sistemi/data/: general_settings.json
market-brosur-sistemi/desınger/: dedinger-scipt.js  desinger-index.html  desinger.style.css
market-brosur-sistemi/desınger/gthb-test/: gıthb-test-index.html  gıthb-test-package.json  gıthb-test-server.js  (+2 more)
market-brosur-sistemi/models/: __init__.py
market-brosur-sistemi/routes/: __init__.py  admin.py  ai.py  ai_extra.py  analytics.py  auth.py  brochure.py  ghost.py  image_bank.py  main.py  products.py  settings.py  wizard.py
market-brosur-sistemi/services/: __init__.py  ai_categorizer.py  brochure_engine.py  bulk_operations.py  excel_io.py  external_api.py  ghost_assistant.py  image_bank.py  image_optimizer.py  image_processor.py  kie_ai.py  market_scraper.py  openai_categorizer.py  version_history.py
market-brosur-sistemi/talimat/: sistem-anayasasi.md
market-brosur-sistemi/templates/: admin_dashboard.html  brochure_builder.html  canvas_test.html  desinger.html  editor.html  githb.html  home.html  index.html  login.html  musteri_form.html  pre_approval.html
market-brosur-sistemi/utils/: __init__.py  constants.py  helpers.py  security.py
(+72 files in other folders)
