[project]
name = "market-brosur-sistemi"
version = "1.0.0"
description = "Market Broşür Sistemi - AI destekli broşür oluşturma platformu"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=6.0.0",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "openai>=2.8.0",
    "openpyxl>=3.1.0",
    "pandas>=2.3.0",
    "pillow>=12.0.0",
    "reportlab>=4.4.0",
    "requests>=2.32.0",
    "werkzeug>=3.1.0",
]
